Fix footer on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,7 @@ footer{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  min-height: 60px;
   background-color: #555;
   padding: 20px 0;
   color: #999;
